; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_ppccap.c_OPENSSL_instrument_bus2.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_ppccap.c_OPENSSL_instrument_bus2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPENSSL_ppccap_P = common dso_local global i32 0, align 4
@PPC_MFTB = common dso_local global i32 0, align 4
@PPC_MFSPR268 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @OPENSSL_instrument_bus2(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i32, i32* @OPENSSL_ppccap_P, align 4
  %9 = load i32, i32* @PPC_MFTB, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* %7, align 8
  %16 = call i64 @OPENSSL_instrument_bus2_mftb(i32* %13, i64 %14, i64 %15)
  store i64 %16, i64* %4, align 8
  br label %28

17:                                               ; preds = %3
  %18 = load i32, i32* @OPENSSL_ppccap_P, align 4
  %19 = load i32, i32* @PPC_MFSPR268, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load i32*, i32** %5, align 8
  %24 = load i64, i64* %6, align 8
  %25 = load i64, i64* %7, align 8
  %26 = call i64 @OPENSSL_instrument_bus2_mfspr268(i32* %23, i64 %24, i64 %25)
  store i64 %26, i64* %4, align 8
  br label %28

27:                                               ; preds = %17
  store i64 0, i64* %4, align 8
  br label %28

28:                                               ; preds = %27, %22, %12
  %29 = load i64, i64* %4, align 8
  ret i64 %29
}

declare dso_local i64 @OPENSSL_instrument_bus2_mftb(i32*, i64, i64) #1

declare dso_local i64 @OPENSSL_instrument_bus2_mfspr268(i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
